--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -28,3 +28,8 @@ server.port=8080
 
 # ? JWT Configuration
 jwt.secret=MySuperSecureJwtSecretKeyThatIsLongEnough123!
+
+# ? File Upload Configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+file.upload-dir=./uploads
